# witness

./: Dockerfile  config_run.bash  config_server.go  config_server_test.go  data.json  test.bash  witness_config_image_build.bash
runtimeImage/: Dockerfile  config.fixed.json  config.json  config.test.json  confighandle.go  deploy_run.bash  newcontract.bash  prepare.bash  run_server.bash  wasm2binary.py  witness_runtime_image_build.bash
runtimeImage/contract/: Cargo.toml  compiler.bash
runtimeImage/contract/src/: lib.rs
runtimeImage/runtimeconfig/: config.json  confighandle.go
runtimeImage/witness_server/: clean.bash  config.json  index.html  rpc.go  witness_server.go
runtimeImage/witness_server/css/: Kaiyun.c370a6d1.css  app.e7b6e023.css
runtimeImage/witness_server/fonts/: DINPro-Medium.2ff5cea5.eot
runtimeImage/witness_server/js/: Kaiyun.a118be0a.js  Kaiyun.a118be0a.js.map  app.f40dc9fa.js  app.f40dc9fa.js.map  chunk-vendors.1d27f34e.js  chunk-vendors.1d27f34e.js.map
sdk/: config.json  sdk.go
