[package]
name = "ogq"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust",rev="612440c35b5f5bd79de9010862d13095f052e06a", features=["bump-alloc"]}
staticvec = {git = "https://github.com/slightlyoutofphase/staticvec", default-features=false}

[features]
mock = ["ontio-std/mock"]
